<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_add_black_24dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/add_task_image_description" />

        <TextView
            android:fontFamily="@font/nunito_extra_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/add_task"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_title"
            android:inputType="text"
            android:autofillHints="taskTitle" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_description"
            android:inputType="textMultiLine"
            android:autofillHints="taskDescription" />

        <Button
            android:id="@+id/buttonSetDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_date" />

        <Button
            android:id="@+id/buttonSetTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_time" />

        <Button
            android:id="@+id/buttonSetAlarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Set Alarm" />

    </LinearLayout>
</ScrollView>
